<resources>
    <string name="app_name">Shopper</string>

    <string name="add_category">Add Category</string>
    <string name="category_name">Category name</string>
    <string name="add_product">Add Product</string>
    <string name="title">Product Name</string>
    <string name="description">Description</string>
    <string name="category">Category</string>
    <string name="quantity_e_g_kg_g_etc">Quantity e.g. kg. g. etc.</string>
    <string name="price">Price</string>
    <string name="discount">Discount</string>
    <string name="discount_note_e_g_10_off">Discount Note e.g. 10% OFF</string>
    <string name="delete_category">Delete Category</string>
    <string name="update_product">Update Product</string>
    <string name="product_available">Product Available</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="full_name">Full Name</string>
    <string name="phone_number">Phone Number</string>
    <string name="shop_name">Shop Name</string>
    <string name="delivery_fee">Delivery Fee</string>
    <string name="county">County</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="complete_address">Complete Address</string>
    <string name="shop_open">Shop Open</string>
    <string name="update">Update</string>
    <string name="recover_password">Recover Password</string>
    <string name="email">Email</string>
    <string name="recover">Recover</string>
    <string name="don_t_have_account_register">Don\'t have account? Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="order_id">Order ID:</string>
    <string name="_1234567">1234567</string>
    <string name="order_date">Order Date:</string>
    <string name="_02_09_2023_02_56pm">02/09/2023 02:56PM</string>
    <string name="order_status">Order Status:</string>
    <string name="in_progress">In Progress</string>
    <string name="buyer_email">Buyer Email:</string>
    <string name="mahmud_gmail_com">mahmud@gmail.com</string>
    <string name="buyer_phone">Buyer Phone:</string>
    <string name="_8801774362950">+8801774362950</string>
    <string name="items">Items:</string>
    <string name="amount">Amount:</string>
    <string name="_320_50">$320.50</string>
    <string name="delivery_addres">Delivery Addres:</string>
    <string name="model_town_daffodil_road_dhaka_1207">Model Town, Daffodil Road, Dhaka(1207)</string>
    <string name="ordered_items">Ordered Items</string>
    <string name="order_details">Order Details</string>
    <string name="_3933939">3933939</string>
    <string name="_03_09_23">03/09/23</string>
    <string name="nusrat_confectionary">Nusrat Confectionary</string>
    <string name="total_items">Total Items:</string>
    <string name="_14">14</string>
    <string name="total_price">Total Price:</string>
    <string name="_348_79">$348.79</string>
    <string name="delivery_to">Delivery To:</string>
    <string name="plot_77_daffodil_road_khagan">Plot 77,Daffodil Road,Khagan</string>
    <string name="register_seller">Register Seller</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="register_user">Register User</string>
    <string name="are_you_a_seller_register_as_seller">Are you a seller? Register as seller</string>
    <string name="reviews">Reviews</string>
    <string name="how_was_your_experience_with_seller_your_feedback_is_very_important_to_improve_our_quality_of_services">How was your experience with seller? Your feedback is very important to improve our quality of services.</string>
    <string name="write_your_review">Write your review…</string>
    <string name="settings">Settings</string>
    <string name="notification_enable_disable">Notification enable/disable</string>
    <string name="status_notification_disabled">Status: Notification disabled</string>
    <string name="shop_details">Shop Details</string>
    <string name="_10">10</string>
    <string name="search">Search</string>
    <string name="showing_all">Showing All</string>
    <string name="review_details">Review Details</string>
    <string name="_4_5_26_393_202">4.5[26,393,202]</string>
    <string name="grocery">Grocery</string>
    <string name="account_status">Account Status</string>
    <string name="total_orders">Total Orders</string>
    <string name="total_completed">Total Completed</string>
    <string name="total_cancelled">Total Cancelled</string>
    <string name="total_in_progress">Total In Progress</string>
    <string name="_0">0</string>
    <string name="total_orders_in_progress">Total Orders(In Progress):</string>
    <string name="total_orders_cancelled">Total Orders(Cancelled)</string>
    <string name="total_orders_completed">Total Orders(Completed)</string>
    <string name="delivery_fee_completed">Delivery Fee(Completed):</string>
    <string name="_0_taka">0 Taka</string>
    <string name="product_details">Product Details</string>
    <string name="_10_off">10% OFF</string>
    <string name="product_title">Product Title</string>
    <string name="the_product_description">The Product Description</string>
    <string name="quantity">Quantity</string>
    <string name="cooking_needs">Cooking Needs</string>
    <string name="delete">Delete</string>
    <string name="order_to">Order To</string>
    <string name="sub_total">Sub Total:</string>
    <string name="total">Total:</string>
    <string name="confirm_order">Confirm Order</string>
    <string name="final_price">Final Price</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="item_title">Item Title</string>
    <string name="_10_kg">10/KG</string>
    <string name="_2">[2]</string>
    <string name="remove">Remove</string>
    <string name="order_id_39393934">Order ID: 39393934</string>
    <string name="_02_11_2023">02/11/2023</string>
    <string name="email_mahmud_gmail_com">Email: mahmud@gmail.com</string>
    <string name="total_amount_66_04">Total Amount: $66.04</string>
    <string name="order_123456">Order: 123456</string>
    <string name="_03_07_23">03/07/23</string>
    <string name="mahmud_islam">Mahmud Islam</string>
    <string name="_12_07_23">12/07/23</string>
    <string name="the_original_review_of_the_user">The original review of the user</string>
    <string name="closed">Closed</string>
    <string name="not_available">Not Available</string>
    <string name="_1_kg">1 KG</string>
    <string name="deshi_fresh_fooddeshi_fresh_fooddeshi_fresh_fooddeshi_fresh_foodeshi_fresh_fooddeshi_fresh_food">Deshi fresh foodDeshi fresh foodDeshi fresh foodDeshi fresh fooDeshi fresh foodDeshi fresh food</string>
    <string name="order_korun">অর্ডার করুন</string>
    <string name="terms_conditions_text">By default you\'re blocked while creating an account automatically without our permission to create a seller account.You may be blocked by your admin if you violet any rules.Please contact your admin to unblock your account and make sure that you are definitely opening the account on your own volition. In any circumstances you may be contacted, you will immediately join us in contacting you. In any problem you can contact our admin. So if you are agree then please click on the I agree button.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.If you are old user then if you blocked then there is no need to set shop category again. You just need to be unblocked by an admin.</string>
    <string name="fetching">fetching…</string>
    <string name="shopper_terms"><b>Shopper</b> App এ আপনাকে স্বাগতম। এটি একটি অনলাইন ভিত্তিক অ্যাপ্লিকেশন, যার মাধ্যমে সব ধরনের পণ্য আপনার হাতের নাগালে পেয়ে যাবেন। আপনি অতি সহজে বাসায়/দোকানে বসে পণ্য ক্রয়/বিক্রয় করতে পারবেন।এতে আপনার সময় এবং শ্রম দুটোই বেচে যাবে।অ্যাপ্লিকেশনের ডিজাইন খুব সহজ ভাবে করা হয়েছে। আমাদের লক্ষ্য এবং উদ্দেশ্য হচ্ছে কম সময়ের মধ্যে সঠিক পণ্য টা আপনাদের কাছে পৌঁছে দেওয়া।\n\n <b>আমাদের শর্তাবলীঃ</b>\n১। পণ্যের গুণগত মান ঠিক রাখতে হবে।\n২।পণ্যের প্যাকেট ফাটা,ছিঁড়া অথবা মেয়াদোত্তীর্ণ পণ্য দেওয়া যাবে না।\n৩। নির্দিষ্ট দামের বেশি দাম লেখা যাবে না।\n৪। সঠিক সময়ের মধ্যে ডেলিভারি দিতে হবে।\n৫। ক্রেতার কাছে কত টাকার নোট আছে সে পরিমাণ ভাংতি টাকা ডেলিভারি ম্যান দিয়ে পাঠিয়ে দিতে হবে।\n৬। ডেলিভারি ম্যানকে অবশ্যই মাল চেক করে নিতে হবে।\n৭। কোন প্রকার অবৈধ মাল পরিবহনের জন্য কর্তৃপক্ষ দায়ী থাকবে না।\n</string>
    <string name="set_discount_price">Set Discount Price</string>
    <string name="original_price_new">Original Price</string>
    <string name="buyer_name">Buyer Name</string>
    <string name="update_data">অ্যাপটি আপডেট করতে কোন ধরনের সমস্যা হলে প্রথমে uninstall করুন,তার পরে আবার install করুন।</string>
    <string name="signin_seller_title">Seller হিসেবে সাইন ইন/সাইন আপ করুন</string>
    <string name="signin_user_title">User হিসেবে সাইন ইন/সাইন আপ করুন</string>
    <string name="select">Select</string>
    <string name="user_sign_in">User Sign in</string>
</resources>