<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/toolbarRL"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_85mdp"
        android:background="@drawable/shape_rect_01"
        android:padding="@dimen/_10mdp">

        <ImageButton
            android:id="@+id/backBtn"
            android:layout_width="@dimen/_25mdp"
            android:layout_height="@dimen/_25mdp"
            android:background="@null"
            android:src="@drawable/ic_arrow_left_white" />

        <ImageButton
            android:id="@+id/deleteBtn"
            android:layout_width="@dimen/_25mdp"
            android:layout_height="@dimen/_25mdp"
            android:layout_alignParentEnd="true"
            android:background="@null"
            android:src="@drawable/ic_delete_white" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="@dimen/_25mdp"
            android:layout_height="@dimen/_25mdp"
            android:layout_toStartOf="@id/deleteBtn"
            android:background="@null"
            android:src="@drawable/ic_edit_white" />

        <TextView
            android:id="@+id/nameTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/product_details"
            android:textColor="@color/white"
            android:textSize="@dimen/_15font_mdp"
            android:textStyle="bold" />


    </RelativeLayout>

    <ImageView
        android:id="@+id/productIconIV"
        android:layout_width="@dimen/_100mdp"
        android:layout_height="@dimen/_100mdp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40mdp"
        android:background="@color/background_theme"
        android:scaleType="centerCrop"
        android:src="@drawable/impl1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/productIconIV"
        android:layout_marginTop="@dimen/_10mdp"
        android:orientation="vertical"
        android:padding="@dimen/_10mdp">

        <TextView
            android:id="@+id/discountNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/shape_rect05"
            android:padding="@dimen/_5mdp"
            android:text="@string/_10_off"
            android:textColor="@color/colorGreen" />

        <TextView
            android:id="@+id/titleTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5mdp"
            android:text="@string/product_title"
            android:textColor="@color/black"
            android:textSize="@dimen/_14font_mdp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5mdp"
            android:text="@string/the_product_description"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/categoryTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5mdp"
            android:text="@string/category"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/quantityTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5mdp"
            android:text="@string/quantity"
            android:textColor="@color/black" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5mdp">

            <TextView
                android:id="@+id/discountPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10mdp"
                android:text="@string/_0"
                android:textColor="@color/colorGray02" />

            <TextView
                android:id="@+id/originalPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10mdp"
                android:layout_toEndOf="@id/discountPriceTV"
                android:text="@string/_0"
                android:textColor="@color/colorGray02" />

        </RelativeLayout>

    </LinearLayout>

</RelativeLayout>