<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".OrderDetailsSellerActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/shape_rect_01"
        android:padding="@dimen/_10mdp">

        <ImageButton
            android:id="@+id/backArrowBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_arrow_left_white" />

        <TextView
            android:id="@+id/orderDetailsTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/order_details"
            android:textColor="@color/white"
            android:textSize="@dimen/_14font_mdp"
            android:textStyle="bold" />

        <ImageButton
            android:id="@+id/editBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_edit_white" />

        <ImageButton
            android:id="@+id/mapBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/_25mdp"
            android:background="@android:color/transparent"
            android:src="@drawable/ic_map_white" />

    </RelativeLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardElevation="@dimen/_3mdp"
        android:background="@color/white"
        app:contentPadding="@dimen/_5mdp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:padding="@dimen/_5mdp">

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_id"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderIdTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_date"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderDateTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/order_status"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/orderStatusTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/background_theme"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer_email"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buyerEmailTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/buyer_phone"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/buyerPhoneTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:autoLink="all"
                    android:text="@string/fetching"
                    android:textColor="@color/background_theme"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/items"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/itemsTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/amount"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/amountTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>

            <TableRow>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/delivery_addres"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/deliveryAddressTV"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/fetching"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_14font_mdp" />


            </TableRow>


        </TableLayout>




    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background_theme"
        android:text="@string/ordered_items"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="@dimen/_13font_mdp"
        android:textStyle="bold"
        android:padding="@dimen/_5mdp"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/orderedItemsRV"
        android:padding="@dimen/_5mdp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/row_ordered_item"/>
</LinearLayout>