<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:tools="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/TextAppearance.AppCompat.Headline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_to"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/shopNameTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/order_to"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textColor="@color/black"
            android:textStyle="bold" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/_1mdp"
            android:background="@color/colorGray00" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/cartItemRV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:listitem="@layout/row_cart_item"
            android:padding="@dimen/_5mdp"

            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" />

        <RelativeLayout
            android:id="@+id/pricesLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/_10mdp">


            <TextView
                android:id="@+id/subTotalLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/_5mdp"
                android:text="@string/sub_total"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/subTotalTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5mdp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deliveryFeeLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subTotalLabelTV"
                android:padding="@dimen/_5mdp"
                android:text="@string/delivery_fee"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/deliveryFeeTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/subTotalTV"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5mdp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPriceLabelTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deliveryFeeLabelTV"
                android:padding="@dimen/_5mdp"
                android:text="@string/total"
                android:textColor="@color/black"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/totalPriceTV"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/deliveryFeeTV"
                android:layout_alignParentEnd="true"
                android:padding="@dimen/_5mdp"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textStyle="bold" />


        </RelativeLayout>

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/checkoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_order"
            android:background="@color/background_theme"
            android:textColor="@color/white"/>


    </LinearLayout>


</ScrollView>